<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserProfile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp">
            <LinearLayout
                android:background="@drawable/coursecount"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile"
                    android:layout_marginTop="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/account"
                    android:contentDescription="@string/profile"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp">

                        <TextView
                            android:id="@+id/Name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alegreya_sc"
                            android:text="@string/users_name"
                            android:textColor="#fff"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:typeface="serif" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/Gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alegreya_italic"
                            android:text="@string/gender"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:typeface="serif" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="120dp"
               android:layout_marginTop="300dp"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:weightSum="2"
                   android:orientation="horizontal"
                   android:baselineAligned="false">
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:orientation="vertical"
                       android:gravity="center">
                       <TextView
                           android:id="@+id/ActiveCourse"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/active_course"
                           android:textAlignment="center"
                           android:textSize="20sp"
                           android:typeface="sans"/>
                       <TextView
                           android:id="@+id/ActiveCount"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:text="0"
                           android:textStyle="bold"
                           android:textSize="20sp"
                           android:paddingTop="10dp"
                           android:gravity="center"
                           android:typeface="sans"/>
                   </LinearLayout>
                   <LinearLayout
                       android:gravity="center"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:orientation="vertical">
                       <TextView
                           android:id="@+id/CompleteCourse"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/complete_course"
                           android:textSize="20sp"
                           android:typeface="sans"
                           android:textAlignment="center"/>
                       <TextView
                           android:id="@+id/CompleteCount"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:gravity="center"
                           android:text="0"
                           android:typeface="sans"
                           android:textStyle="bold"
                           android:textSize="20sp"
                           android:paddingTop="10dp"/>
                   </LinearLayout>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email_black_24dp"
                    android:contentDescription="TODO" />
                <TextView
                    android:id="@+id/Email"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/email_id"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_phone_android_black_24dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:id="@+id/Mobile"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/mobile_no"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Setting"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_settings_black_24dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/setting"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Share"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_share_black_24dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/share"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/SignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5mm"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/developed_by_jocasta"
            android:textColor="@color/background"
            android:textStyle="bold"
            tools:ignore="InOrMmUsage" />
    </LinearLayout>

</ScrollView>