<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoPlayer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/navigationView">
        <VideoView
            android:id="@+id/Video_Player"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_of_video"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:id="@+id/Author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/author_name"
                    android:textColor="@color/textColor"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:id="@+id/level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level"/>
                    <TextView
                        android:id="@+id/PublishDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publish_date"
                        android:layout_marginStart="10dp"/>
                    <TextView
                        android:id="@+id/Duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/duration"/>
                    <RatingBar
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/enrollNow"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/button"
                        android:text="Enroll Now"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/Wishlist"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/button"
                        android:text="Add to Wishlist"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Course Description"
                        android:textSize="20dp"
                        android:textColor="@color/textColor"/>
                    <TextView
                        android:id="@+id/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/OnDemand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="on Demand Video"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_alignParentBottom="true"
        android:background="@color/label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/item"
        app:itemTextColor="@color/item"/>

</RelativeLayout>